; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/vlc-video/extr_vlc-video-source.c_get_format_lines.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/vlc-video/extr_vlc-video-source.c_get_format_lines.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i64)* @get_format_lines to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_format_lines(i32 %0, i32 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  %8 = load i32, i32* %5, align 4
  switch i32 %8, label %22 [
    i32 136, label %9
    i32 133, label %9
    i32 128, label %19
    i32 129, label %19
    i32 131, label %19
    i32 135, label %19
    i32 132, label %19
    i32 138, label %19
    i32 137, label %19
    i32 130, label %19
    i32 134, label %21
  ]

9:                                                ; preds = %3, %3
  %10 = load i64, i64* %7, align 8
  %11 = icmp eq i64 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %9
  %13 = load i32, i32* %6, align 4
  br label %17

14:                                               ; preds = %9
  %15 = load i32, i32* %6, align 4
  %16 = udiv i32 %15, 2
  br label %17

17:                                               ; preds = %14, %12
  %18 = phi i32 [ %13, %12 ], [ %16, %14 ]
  store i32 %18, i32* %4, align 4
  br label %24

19:                                               ; preds = %3, %3, %3, %3, %3, %3, %3, %3
  %20 = load i32, i32* %6, align 4
  store i32 %20, i32* %4, align 4
  br label %24

21:                                               ; preds = %3
  br label %22

22:                                               ; preds = %3, %21
  br label %23

23:                                               ; preds = %22
  store i32 0, i32* %4, align 4
  br label %24

24:                                               ; preds = %23, %19, %17
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
